# GrindVacPro

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  Makefile  README.md  docker-compose.yml  log.txt
.kilo/: kilo.jsonc
.kilo/plans/: 1782069686003-grindvacpro-implementation.md  1782069686003-telegram-bot-service.md
infra/postgres/: init.sql
services/analyzer/: AGENTS.md  Dockerfile  requirements.txt
services/analyzer/src/: __init__.py  prompts.py  prompts_copy.py  worker.py
services/dashboard/: Dockerfile  requirements.txt
services/dashboard/src/: __init__.py  app.py  db.py  queries.py
services/dashboard/src/pages/: 01_overview.py  02_analytics.py  (+1 more)
services/scraper/: AGENTS.md  Dockerfile  requirements.txt  search_queries.json  selectors.json
services/scraper/src/: __init__.py  main.py  pipeline.py  search.py  selectors.py
services/telegram_bot/: AGENTS.md  Dockerfile
services/telegram_bot/src/: callbacks.py  keyboards.py  main.py  messages.py  worker.py
services/telegram_monitor/: Dockerfile  requirements.txt
services/telegram_monitor/data/: keywords.txt  monitoring_targets.txt
services/telegram_monitor/src/: __init__.py  client.py  main.py  parser.py  storage.py
services/transformer/: AGENTS.md  Dockerfile  new_lightweight_way.txt  requirements.txt  resume.txt
services/transformer/src/: __init__.py  worker.py
shared/: pyproject.toml  requirements.txt  resume.txt
shared/src/: __init__.py  config.py  database.py  models.py  schemas.py  security.py  selectors.py
shared/src/utils/: __init__.py  crypto.py  logger.py  url.py
